# Aviation-localization

./: .gitignore  TODO.md  config.yaml  gpu.py  map.html
Docs/: 坐标系变换.md
datas/: all.csv  uav_track1+90.csv  uav_track198+90.csv  uav_track390+90.csv  uav_track580+90.csv  uav_track_纯前端198.csv  uav_track_纯前端390.csv  uav_track_纯后端198.csv  uav_track_纯后端390.csv  uav_track农村198.csv  uav_track农村390.csv  uav_track城市198.csv  uav_track城市390.csv  uav_track田野198.csv  uav_track田野390.csv
src/: 03.csv  CMakeLists.txt  Frame_class.py  Image_Viewer.py  core.py  orb_cv.cpp  orb_move.cpp  orb_move.py  pose_estimation_2d2d.cpp  show-img.py  show_data.py  show_data2.py  show_img.py  test.py  test2.py  test3.py  tools.py  uav_location.py  uav_location_bak.py  uav_track.csv  像素坐标与UTM坐标转换拟合.py  坐标系拟合3.py  坐标计算.py  坐标转换拟合2.py  常用计算.py
src/accelerated_features/modules/: xfeat.py
src/templates/: map.html
src/wildnav/: requirements.txt
src/wildnav/results/: calculated_coordinates.csv
src/wildnav/src/: Global_position.py  build_map.py  extract_image_meta_exif.py  superglue_utils.py  wildnav.py
废案/: core.py  direct_method.py  光流法.py  废案.py  迭代引力场法.py
